--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dcloudio/uni-components": "3.0.0-4000820240401001",
     "@dcloudio/uni-mp-weixin": "3.0.0-4000820240401001",
     "@vant/weapp": "^1.11.4",
+    "express": "^4.19.2",
     "lodash-es": "^4.17.21",
     "vue": "^3.3.11",
     "vue-i18n": "^9.1.9"
