--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/node": "^3.0.26",
     "express": "^4.19.2",
     "lodash-es": "^4.17.21",
+    "uni-ajax": "^2.5.1",
     "vue": "^3.3.11",
     "vue-i18n": "^9.1.9"
   },
